--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
-  <display-name>CrunchifySpringMVCTutorial</display-name>
-  <welcome-file-list>
-    <welcome-file>home.jsp</welcome-file>
-  </welcome-file-list>  
+  <display-name>CrunchifySpringMVCTutorial</display-name> 
    <servlet>
         <servlet-name>home</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -14,5 +11,6 @@
         <url-pattern>/home.jsp</url-pattern>
         <url-pattern>/home.html</url-pattern>
         <url-pattern>/mosque_data.json</url-pattern>
+        <url-pattern>/modal.load</url-pattern>
     </servlet-mapping>
 </web-app>
