--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
-  <display-name>CrunchifySpringMVCTutorial</display-name> 
-   <servlet>
-        <servlet-name>home</servlet-name>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+ xmlns="http://java.sun.com/xml/ns/javaee"
+ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+ id="WebApp_ID" version="3.0">
+  <display-name>Dome</display-name> 
+  	 <servlet>
+        <servlet-name>dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>home</servlet-name>
+        <servlet-name>dispatcher</servlet-name>
         <url-pattern>/home.jsp</url-pattern>
         <url-pattern>/home.html</url-pattern>
         <url-pattern>/mosque_data.json</url-pattern>
         <url-pattern>/modal.load</url-pattern>
+        <url-pattern>/userlogin.json</url-pattern>
         <url-pattern>/user.login</url-pattern>
         </servlet-mapping>
 </web-app>
