--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -20,6 +20,7 @@
         <url-pattern>/sign-out</url-pattern>
         <url-pattern>/userup</url-pattern>
         <url-pattern>/values</url-pattern>
+        <url-pattern>/signup.json</url-pattern>
         </servlet-mapping>
          <error-page>
   			<error-code>404</error-code>
